--- a/111-2/ASThermodynamic/CA8/CA8-1.ipynb
+++ b/111-2/ASThermodynamic/CA8/CA8-1.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,14 +76,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_7664\\2929583193.py:29: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_7664\\3503954125.py:29: RuntimeWarning: invalid value encountered in double_scalars\n",
       "  qv_mix[t] = (qvs + Rt)/H_mix[t]\n"
      ]
     }
@@ -153,7 +153,10 @@
     "# hms\n",
     "hms_target = hms_env.copy()\n",
     "hms_in_pbl = np.ones(target_index) * Sd_env[target_index] + Lv * Mog.SaturatedSpecificHumidity(T_in_pbl, P_env[:target_index])\n",
-    "hms_target[:target_index] = np.ones(target_index) * hms_in_pbl\n"
+    "hms_target[:target_index] = np.ones(target_index) * hms_in_pbl\n",
+    "# qv\n",
+    "qv_target = qv_env.copy()\n",
+    "qv_target[:target_index] = np.ones(target_index) * qv_mix[-1]\n"
    ]
   },
   {
@@ -165,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -175,8 +178,8 @@
       "LCL = 1763.5 m\n",
       "LFC = 2428.9 m\n",
       "EL = 16080.7 m\n",
-      "CIN = 552.3 J\n",
-      "CAPE = 33799.4 J\n"
+      "CIN = -18.7 J\n",
+      "CAPE = 18.7 J\n"
      ]
     },
     {
@@ -217,10 +220,6 @@
     "LCL_index = np.where(np.abs(H_env - LCL)<1)[0][0]\n",
     "print('LCL = %.1f m'%LCL)\n",
     "\n",
-    "# Compute Tv\n",
-    "Tv_target = Mog.VirtualTemp(T_env[time_index], qv_env[time_index])\n",
-    "thetav = Mog.VirtualPotentialTemp(T_env[time_index], qv_env[time_index], P_env[time_index])\n",
-    "\n",
     "# Compute Gamma_m line\n",
     "T_moist = np.array([Tc],dtype=float)\n",
     "for i in range(1,len(H_env)-LCL_index):\n",
@@ -252,13 +251,17 @@
     "T_dry = np.linspace(T_parcel[target_index], T_parcel[LCL_index], LCL_index-target_index)\n",
     "T_parcel[target_index:LCL_index] = T_dry\n",
     "\n",
+    "# Compute Tv and Tv'\n",
+    "Tv_parcel = Mog.VirtualTemp(T_parcel, qv_target)\n",
+    "Tv_env = Mog.VirtualTemp(T_env, qv_env)\n",
+    "\n",
     "# Compute CIN\n",
-    "CIN_curve = T_env[target_index:LFC_index] - T_parcel[target_index:LFC_index]\n",
+    "CIN_curve = (Tv_parcel[target_index:LFC_index] - Tv_env[target_index:LFC_index])/Tv_env[target_index:LFC_index] * g0\n",
     "CIN = np.trapz(CIN_curve)\n",
     "print('CIN = %.1f J'%CIN)\n",
     "\n",
     "# Compute CAPE\n",
-    "CAPE_curve = T_parcel[LFC_index:EL_index] - T_env[LFC_index:EL_index]\n",
+    "CAPE_curve = (Tv_env[target_index:LFC_index] - Tv_parcel[target_index:LFC_index])/Tv_env[target_index:LFC_index] * g0\n",
     "CAPE = np.trapz(CAPE_curve)\n",
     "print('CAPE = %.1f J'%CAPE)\n",
     "\n",
@@ -292,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
