--- a/MachineLearning/MLbasic_booknote.ipynb
+++ b/MachineLearning/MLbasic_booknote.ipynb
@@ -22,12 +22,13 @@
     "import seaborn as sbn\n",
     "from sklearn.preprocessing import LabelBinarizer\n",
     "import torch\n",
-    "import torch.nn as nn"
+    "import torch.nn as nn\n",
+    "import resources"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +42,7 @@
    ],
    "source": [
     "print(torch.__version__)\n",
-    "print(torch.cuda.is_available())"
+    "print(torch.cuda.is_available())\n"
    ]
   }
  ],
